Tweak Alacritty fonts

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -27,8 +27,8 @@ window:
   # Blank space added around the window in pixels. This padding is not scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 2
-    y: 2
+    x: 0
+    y: 0
 
   # Window decorations
   #
@@ -83,23 +83,20 @@ font:
   # Normal (roman) font face
   normal:
     family: Office Code Pro
-    # The `style` can be specified to pick a specific face.
-    # style: Regular
+    style: Regular
 
   # Italic font face
   bold:
     family: Office Code Pro
-    # The `style` can be specified to pick a specific face.
-    # style: Bold
+    style: Bold
 
   # Italic font face
   italic:
     family: Office Code Pro
-    # The `style` can be specified to pick a specific face.
-    # style: Italic
+    style: Italic
 
   # Point size
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
