I always come back

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,24 +32,25 @@ set -g mode-style reverse
 set -g message-style reverse
 set -g message-command-style reverse
 
-set -g pane-border-fg colour18
+set -g pane-border-fg colour7
 set -g pane-border-bg default
 
-set -g pane-active-border-fg colour20
+set -g pane-active-border-fg colour10
 set -g pane-active-border-bg default
 
+set -g status-right-length 150
 set -g status-left ''
-set -g status-left-fg colour6
-set -g status-right ' #S #[fg=colour18]•#[fg=colour19] %-d %B %Y #[fg=colour18]•#[fg=colour19] %-I:%M%p '
+set -g status-left-fg colour10
+set -g status-right '#[fg=colour14] #S #[fg=colour7]•#[fg=colour14] %-d %B %Y #[fg=colour7]•#[fg=colour14] %-I:%M%p '
 
-setw -g window-status-separator '#[fg=colour18]•'
+setw -g window-status-separator '#[fg=colour7]•'
 setw -g window-status-format ' #W '
 setw -g window-status-current-format ' #W '
 
 setw -g window-status-attr none
-setw -g window-status-fg default
+setw -g window-status-fg colour14
 setw -g window-status-bg default
 
 setw -g window-status-current-attr none
-setw -g window-status-current-fg colour6
+setw -g window-status-current-fg colour10
 setw -g window-status-current-bg default
