--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,7 +32,7 @@
   ds = diff --staged
   f = fetch
   ff = merge --ff-only
-  l = log --graph --pretty=format:'%C(7)%h %C(8)→ %C(15)%s %C(4)%aN %C(2)%cd%C(1)%d' --abbrev-commit --date=relative
+  l = log --graph --pretty=format:'%C(3)%h %C(14)→ %C(bold 10)%s%C(reset) %C(6)%aN %C(14)%cd%C(bold 5)%d' --abbrev-commit --date=relative
   m = merge
   pf = push --force-with-lease
   r = rebase
