--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,19 +39,19 @@ set -g pane-active-border-fg colour10
 set -g pane-active-border-bg default
 
 set -g status-right-length 150
-set -g status-left ''
+set -g status-left ' #[fg=colour13]#S '
 set -g status-left-fg colour6
-set -g status-right '#[fg=colour6]#S #[fg=colour7]|#[fg=colour14] %-d %B %Y #[fg=colour7]|#[fg=colour14] %-I:%M%p '
+set -g status-right '#[fg=colour14] %-d %B %Y #[fg=colour7]/#[fg=colour14] %-I:%M%p '
 
-setw -g window-status-separator '|'
-setw -g window-status-format ' #I: #W '
-setw -g window-status-current-format ' #I: #W '
+setw -g window-status-separator ''
+setw -g window-status-format '#[fg=colour7]/ #[fg=colour14]#I: #W '
+setw -g window-status-current-format '#[fg=colour7]/ #[fg=colour14]#I: #[fg=colour10,bold]#W '
 
 setw -g window-status-attr none
 setw -g window-status-fg colour14
 setw -g window-status-bg default
 
-setw -g window-status-current-attr bold
+setw -g window-status-current-attr none
 setw -g window-status-current-fg colour10
 setw -g window-status-current-bg default
 
