--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,11 +32,14 @@ set -g mode-style reverse
 set -g message-style reverse
 set -g message-command-style reverse
 
-set -g pane-border-fg colour7
-set -g pane-border-bg default
+set -g pane-border-style none
+set -g pane-active-border-style none
 
-set -g pane-active-border-fg colour10
-set -g pane-active-border-bg default
+set -g pane-border-fg colour7
+set -g pane-border-bg colour7
+
+set -g pane-active-border-fg colour6
+set -g pane-active-border-bg colour6
 
 set -g status-left ' #[fg=colour13]#S '
 set -g status-left-fg colour6
