--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 [core]
   editor = vim
   excludesfile = ~/.gitignore.global
-#  pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [credential]
   helper = cache --timeout=3600
 [merge]
