Cleaner tmux styles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,8 +24,8 @@ set -g status-keys vi
 
 bind-key m send-keys C-l
 
-set -g status-fg colour14
-set -g status-bg default
+set -g status-fg colour15
+set -g status-bg colour10
 set -g status-attr none
 
 set -g mode-style reverse
@@ -38,25 +38,29 @@ set -g pane-active-border-style none
 set -g pane-border-fg colour7
 set -g pane-border-bg colour7
 
-set -g pane-active-border-fg colour6
-set -g pane-active-border-bg colour6
+set -g pane-active-border-fg colour10
+set -g pane-active-border-bg colour10
 
-set -g status-left ' #[fg=colour13]#S '
-set -g status-left-fg colour6
+set -g status-left ' #S: '
+set -g status-left-fg default
+set -g status-left-bg default
+set -g status-left-attr bold
 set -g status-left-length 150
 
-set -g status-right '#[fg=colour14] %-d %B %Y #[fg=colour7]/#[fg=colour14] %-I:%M%p '
-set -g status-right-fg colour6
+set -g status-right ' %-d %B %Y #[reverse] %-I:%M%p '
+set -g status-right-fg default
+set -g status-right-bg default
+set -g status-right-attr none
 set -g status-right-length 150
 
 setw -g window-status-separator ''
 
-setw -g window-status-format '#[fg=colour7]/ #[fg=colour14]#I: #W '
-setw -g window-status-attr none
-setw -g window-status-fg colour14
+setw -g window-status-format ' #I: #W '
+setw -g window-status-fg default
 setw -g window-status-bg default
+setw -g window-status-attr none
 
-setw -g window-status-current-format '#[fg=colour7]/ #[fg=colour14]#I: #[fg=colour10,bold]#W '
-setw -g window-status-current-attr none
-setw -g window-status-current-fg colour10
+setw -g window-status-current-format ' #I: #W '
+setw -g window-status-current-fg default
 setw -g window-status-current-bg default
+setw -g window-status-current-attr reverse,bold
