Move status to top

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,6 +24,8 @@ set -g status-keys vi
 
 bind-key m send-keys C-l
 
+set -g status-position top
+
 set -g status-fg colour15
 set -g status-bg colour10
 set -g status-attr none
