Tweak message styles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,8 +31,9 @@ set -g status-bg colour10
 set -g status-attr none
 
 set -g mode-style reverse
-set -g message-style reverse
-set -g message-command-style reverse
+
+set -g message-style fg=colour15,bg=colour4,bold
+set -g message-command-style none
 
 set -g pane-border-style none
 set -g pane-active-border-style none
