--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,8 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+set -s escape-time 0
+
 bind k select-pane -U
 bind j select-pane -D
 bind h select-pane -L
