--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,9 +28,7 @@ bind-key m send-keys C-l
 
 set -g status-position top
 
-set -g status-fg colour15
-set -g status-bg colour10
-set -g status-attr none
+set -g status-style fg=default,bg=colour7,none
 
 set -g mode-style reverse
 
@@ -40,32 +38,22 @@ set -g message-command-style none
 set -g pane-border-style none
 set -g pane-active-border-style none
 
-set -g pane-border-fg colour7
-set -g pane-border-bg colour7
+set -g pane-border-style fg=colour12,bg=colour15
+set -g pane-active-border-style fg=colour12,bg=colour7
 
-set -g pane-active-border-fg colour10
-set -g pane-active-border-bg colour10
 
-set -g status-left ' #S: '
-set -g status-left-fg default
-set -g status-left-bg default
-set -g status-left-attr bold
+set -g status-left ''
+set -g status-left-style fg=none
 set -g status-left-length 150
 
-set -g status-right ' %-d %B %Y #[reverse] %-I:%M%p '
-set -g status-right-fg default
-set -g status-right-bg default
-set -g status-right-attr none
+set -g status-right ' #S '
+set -g status-right-style fg=colour10,bg=colour15
 set -g status-right-length 150
 
 setw -g window-status-separator ''
 
-setw -g window-status-format ' #I: #W '
-setw -g window-status-fg default
-setw -g window-status-bg default
-setw -g window-status-attr none
+setw -g window-status-format ' #W '
+setw -g window-status-style none
 
-setw -g window-status-current-format ' #I: #W '
-setw -g window-status-current-fg default
-setw -g window-status-current-bg default
-setw -g window-status-current-attr reverse,bold
+setw -g window-status-current-format ' #W '
+setw -g window-status-current-style fg=colour15,bg=colour13,bold
