--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,7 +43,7 @@ set -g pane-active-border-style fg=colour12,bg=colour7
 
 
 set -g status-left ''
-set -g status-left-style fg=none
+set -g status-left-style none
 set -g status-left-length 150
 
 set -g status-right ' #S '
