Status on the bottom

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,7 @@ set -g status-keys vi
 
 bind-key m send-keys C-l
 
-set -g status-position top
+set -g status-position bottom
 
 set -g status-style fg=colour15,bg=colour10,none
 
