Update tmux styles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,7 @@ bind-key m send-keys C-l
 
 set -g status-position bottom
 
-set -g status-style fg=colour15,bg=colour10,none
+set -g status-style fg=colour10,bg=colour7,none
 
 set -g mode-style reverse
 
@@ -46,13 +46,13 @@ set -g status-left-style none
 set -g status-left-length 150
 
 set -g status-right ' #S '
-set -g status-right-style fg=colour15,bg=colour4,bold
+set -g status-right-style fg=colour15,bg=colour13,bold
 set -g status-right-length 150
 
 setw -g window-status-separator ''
 
-setw -g window-status-format '#[bg=colour14,bold] #I #[default] #W '
+setw -g window-status-format '#[fg=colour15,bg=colour14,bold] #I #[default] #W '
 setw -g window-status-style none
 
-setw -g window-status-current-format '#[bg=colour4,bold] #I #[default,bold] #W '
+setw -g window-status-current-format '#[fg=colour15,bg=colour13,bold] #I #[default,bold] #W '
 setw -g window-status-current-style none
