--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 [core]
   editor = vim
   excludesfile = ~/.gitignore.global
-	pager = diff-so-fancy | less --tabs=4 -RFX
+  pager = diff-so-fancy | less --tabs=4 -RFX
 [credential]
   helper = cache --timeout=3600
 [merge]
@@ -32,6 +32,7 @@
   ds = diff --staged
   f = fetch
   ff = merge --ff-only
+  ll = log --graph --pretty=format:'%C(3)%h %C(14)→ %C(bold 10)%s%C(reset) %C(6)%aN %C(14)%cd%C(bold 5)%d' --abbrev-commit
   l = log --graph --pretty=format:'%C(3)%h %C(14)→ %C(bold 10)%s%C(reset) %C(6)%aN %C(14)%cd%C(bold 5)%d' --abbrev-commit --date=relative
   m = merge
   pf = push --force-with-lease
