--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,18 +41,18 @@ set -g pane-active-border-style none
 set -g pane-border-style fg=colour12,bg=colour15
 set -g pane-active-border-style fg=colour12,bg=colour7
 
-set -g status-left ' #S #[fg=colour15]┃#[default]'
-set -g status-left-style bold
+set -g status-left ''
+set -g status-left-style default
 set -g status-left-length 150
 
-set -g status-right '#[fg=colour15]┃#[default] %I:%M%p '
-set -g status-right-style bold
+set -g status-right '%I:%M%p #[bold,fg=colour15,bg=colour13] #S '
+set -g status-right-style default
 set -g status-right-length 150
 
-setw -g window-status-separator '#[fg=colour15]┃#[default]'
+setw -g window-status-separator ''
 
-setw -g window-status-format ' #I: #W '
+setw -g window-status-format ' #W '
 setw -g window-status-style default
 
-setw -g window-status-current-format ' #I: #W '
-setw -g window-status-current-style bold
+setw -g window-status-current-format ' #W '
+setw -g window-status-current-style bold,reverse
