--- a/ruby/.bundle/config
+++ b/ruby/.bundle/config
@@ -5,3 +5,4 @@ BUNDLE_GEM__TEST: "rspec"
 BUNDLE_GEM__MIT: "true"
 BUNDLE_GEM__COC: "true"
 BUNDLE_PATH: "vendor/bundle"
+BUNDLE_BUILD__LIBXML-RUBY: "--with-xml2-config=/usr/local/opt/libxml2/bin/xml2-config"
