--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -48,14 +48,22 @@
   branch       = auto
   diff         = auto
   status       = auto
+  ui = true
 [color "branch"]
   current      = yellow reverse
   local        = yellow
   remote       = green
 [color "diff"]
-  meta         = blue
-  frag         = yellow
-  old          = red
-  new          = green
+  meta = magenta bold
+  frag = blue
+  old = red
+  new = green
+  commit = cyan
+  whitespace = red reverse
 [color "status"]
   header       = magenta bold
+[color "diff-highlight"]
+  oldNormal = red
+  oldHighlight = red reverse
+  newNormal = green
+  newHighlight = green reverse
