--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
+# set -g default-terminal "xterm-256color"
 set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ',*:Tc'
 
 unbind C-b
 set -g prefix C-a
@@ -28,24 +30,21 @@ bind-key m send-keys C-l
 
 set -g status-position bottom
 
-set -g status-style fg=colour10,bg=colour7,none
+set -g status-style fg=default,bg=default,none
 
 set -g mode-style reverse
 
-set -g message-style fg=colour15,bg=colour5,bold
+set -g message-style fg=colour0,bg=colour5
 set -g message-command-style none
 
-set -g pane-border-style none
-set -g pane-active-border-style none
-
-set -g pane-border-style fg=colour12,bg=colour15
-set -g pane-active-border-style fg=colour12,bg=colour7
+set -g pane-border-style fg=colour8,bg=default
+set -g pane-active-border-style fg=colour5,bg=default
 
 set -g status-left ''
 set -g status-left-style default
 set -g status-left-length 150
 
-set -g status-right '%I:%M%p #[bold,fg=colour15,bg=colour13] #S '
+set -g status-right '%I:%M%p #[fg=colour0,bg=colour4] #S '
 set -g status-right-style default
 set -g status-right-length 150
 
@@ -55,4 +54,4 @@ setw -g window-status-format ' #W '
 setw -g window-status-style default
 
 setw -g window-status-current-format ' #W '
-setw -g window-status-current-style bold,reverse
+setw -g window-status-current-style bold,reverse,fg=colour2
