--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,14 +44,14 @@ set -g status-left ''
 set -g status-left-style default
 set -g status-left-length 150
 
-set -g status-right '%I:%M%p #[fg=colour0,bg=colour4] #S '
+set -g status-right '%I:%M%p #[fg=colour0,bg=colour3] #S '
 set -g status-right-style default
 set -g status-right-length 150
 
 setw -g window-status-separator ''
 
 setw -g window-status-format ' #W '
-setw -g window-status-style default
+setw -g window-status-style fg=colour19
 
 setw -g window-status-current-format ' #W '
-setw -g window-status-current-style bold,reverse,fg=colour2
+setw -g window-status-current-style bold,reverse,fg=colour3
