--- a/ruby/.bundle/config
+++ b/ruby/.bundle/config
@@ -6,3 +6,5 @@ BUNDLE_GEM__MIT: "true"
 BUNDLE_GEM__COC: "true"
 BUNDLE_PATH: "vendor/bundle"
 BUNDLE_BUILD__LIBXML-RUBY: "--with-xml2-config=/usr/local/opt/libxml2/bin/xml2-config"
+BUNDLE_BUILD__LIBV8: "--with-system-v8"
+BUNDLE_BUILD__THERUBYRACER: "--with-v8-dir=/usr/local/opt/v8@3.15"
