--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -14,7 +14,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  decorations: none
+  decorations: full
 
   # Startup Mode (changes require restart)
   #
@@ -28,7 +28,7 @@ window:
 
   # You cannot set the startup_mode to "Maximized" and set the decorations to
   # "none" in Alacritty 0.4.0 due to a bug upstream in one of its dependencies.
-  startup_mode: Windowed
+  startup_mode: Fullscreen
 
   # Window title
   title: Alacritty
@@ -43,7 +43,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: Hack
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -54,7 +54,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Hack
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -65,7 +65,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Hack
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -82,7 +82,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 11.5
+  size: 12
 
   # If the font quality on non-retina display looks bad then set
   # `use_thin_strokes` to `true` and enable font smoothing by running the
@@ -97,3 +97,37 @@ live_config_reload: true
 
 key_bindings:
   - { key: Q, mods: Control, chars: "\x11" }
+
+ # Colors (Solarized Light)
+colors:
+  # Default colors
+  primary:
+    background: '0xfdf6e3' # base3
+    foreground: '0x657b83' # base00
+
+  # Cursor colors
+  cursor:
+    text:   '0xfdf6e3' # base3
+    cursor: '0x657b83' # base00
+
+  # Normal colors
+  normal:
+    black:   '0x073642' # base02
+    red:     '0xdc322f' # red
+    green:   '0x859900' # green
+    yellow:  '0xb58900' # yellow
+    blue:    '0x268bd2' # blue
+    magenta: '0xd33682' # magenta
+    cyan:    '0x2aa198' # cyan
+    white:   '0xeee8d5' # base2
+
+  # Bright colors
+  bright:
+    black:   '0x002b36' # base03
+    red:     '0xcb4b16' # orange
+    green:   '0x586e75' # base01
+    yellow:  '0x657b83' # base00
+    blue:    '0x839496' # base0
+    magenta: '0x6c71c4' # violet
+    cyan:    '0x93a1a1' # base1
+    white:   '0xfdf6e3' # base3
