--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,10 +46,10 @@ set -g status-right '%I:%M%p #[bold,fg=colour15,bg=colour3] #S '
 set -g status-right-style default
 set -g status-right-length 150
 
-setw -g window-status-separator ''
+setw -g window-status-separator '#[fg=colour7]//'
 
-setw -g window-status-format ' #W '
+setw -g window-status-format ' #I. #W '
 setw -g window-status-style fg=colour14
 
-setw -g window-status-current-format ' #W '
-setw -g window-status-current-style bold,fg=colour15,bg=colour4
+setw -g window-status-current-format ' #I. #W '
+setw -g window-status-current-style fg=colour6
