--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -2,9 +2,6 @@ mouse:
   hide_when_typing: true
 
 window:
-  # Spread additional padding evenly around the terminal content.
-  dynamic_padding: true
-
   # Window decorations
   #
   # Values for `decorations`:
@@ -35,8 +32,8 @@ window:
 
   dynamic_padding: true
   padding:
-    x: 6
-    y: 6
+    x: 3
+    y: 0
 
 # Font configuration
 font:
@@ -81,13 +78,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Italic
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
   # Point size
-  size: 10
+  size: 16
 
   # If the font quality on non-retina display looks bad then set
   # `use_thin_strokes` to `true` and enable font smoothing by running the
