--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,18 +38,19 @@ set -g message-command-style none
 set -g pane-border-style fg=colour7,bg=default
 set -g pane-active-border-style fg=colour10,bg=default
 
-set -g status-left ''
-set -g status-left-style default
+set -g status-left ' #S '
+set -g status-left-style bold,fg=colour15,bg=colour6
 set -g status-left-length 150
 
-set -g status-right '%I:%M%p #[bold,fg=colour15,bg=colour3] #S '
-set -g status-right-style default
+set -g status-right ' %I:%M%p '
+set -g status-right-style bold,fg=colour15,bg=colour4
 set -g status-right-length 150
 
-setw -g window-status-separator '#[fg=colour7]//'
+set -g status-justify centre
+setw -g window-status-separator ' '
 
-setw -g window-status-format ' #I. #W '
-setw -g window-status-style fg=colour14
+setw -g window-status-format ' #W '
+setw -g window-status-style fg=colour14,bg=colour7
 
-setw -g window-status-current-format ' #I. #W '
-setw -g window-status-current-style fg=colour6
+setw -g window-status-current-format ' #W '
+setw -g window-status-current-style fg=colour15,bg=colour13
