--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,8 +38,8 @@ set -g message-command-style none
 set -g pane-border-style fg=colour7,bg=default
 set -g pane-active-border-style fg=colour13,bg=default
 
-set -g status-left ' #S:'
-set -g status-left-style bold,fg=colour13
+set -g status-left ' #S '
+set -g status-left-style bold,bg=colour13,fg=colour15
 set -g status-left-length 150
 
 set -g status-right ' %I:%M%p '
