--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,8 +32,8 @@
   ds = diff --staged
   f = fetch
   ff = merge --ff-only
-  ll = log --graph --pretty=format:'%C(3)%h %C(14)→ %C(bold 10)%s%C(reset) %C(6)%aN %C(14)%cd%C(bold 5)%d' --abbrev-commit
-  l = log --graph --pretty=format:'%C(3)%h %C(14)→ %C(bold 10)%s%C(reset) %C(6)%aN %C(14)%cd%C(bold 5)%d' --abbrev-commit --date=relative
+  ll = log --graph --pretty=format:'%C(bold 0)%h %C(reset)%C(6)→ %C(8)%s%C(reset) %C(4)%aN %C(7)%cd%C(2)%d' --abbrev-commit
+  l = log --graph --pretty=format:'%C(bold 0)%h %C(reset)%C(6)→ %C(8)%s%C(reset) %C(4)%aN %C(7)%cd%C(2)%d' --abbrev-commit --date=relative
   m = merge
   pf = push --force-with-lease
   r = rebase
