--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -32,8 +32,8 @@ window:
 
   dynamic_padding: false
   padding:
-    x: 2
-    y: 2
+    x: 3
+    y: 0
 
 # Font configuration
 font:
@@ -48,7 +48,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: "JetBrains Mono"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -59,7 +59,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -70,7 +70,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -81,7 +81,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
