--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,22 +35,23 @@ set -g mode-style reverse
 set -g message-style bg=colour8,fg=colour11
 set -g message-command-style none
 
+set -g pane-border-format '┤#{pane_current_command}├'
 set -g pane-border-style fg=colour7,bg=default
 set -g pane-active-border-style fg=colour4,bg=default
 
-set -g status-left ' #S '
+set -g status-left ''
 set -g status-left-style bold,bg=colour6,fg=colour15
 set -g status-left-length 150
 
-set -g status-right ' %I:%M%p '
-set -g status-right-style bg=colour7,fg=colour15
+set -g status-right ' #S '
+set -g status-right-style bg=colour54,fg=colour15,bold
 set -g status-right-length 150
 
-set -g status-justify centre
-setw -g window-status-separator '#[fg=colour7] / '
+set -g status-justify left
+setw -g window-status-separator '#[fg=colour7]/'
 
-setw -g window-status-format '#I:#W'
+setw -g window-status-format ' #I #W '
 setw -g window-status-style fg=colour7
 
-setw -g window-status-current-format '#I:#W'
+setw -g window-status-current-format ' #I #W '
 setw -g window-status-current-style fg=colour4,bold
