--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,32 +26,31 @@ set -g status-keys vi
 
 bind-key m send-keys C-l
 
-set -g status-position bottom
+set -g status-position top
 
-set -g status-style fg=default,bg=default,none
+set -g status-style fg=colour15,bg=colour254,none
 
 set -g mode-style reverse
 
 set -g message-style bg=colour8,fg=colour11
 set -g message-command-style none
 
-set -g pane-border-format '┤#{pane_current_command}├'
-set -g pane-border-style fg=colour7,bg=default
-set -g pane-active-border-style fg=colour4,bg=default
+set -g pane-border-style fg=colour254,bg=default
+set -g pane-active-border-style fg=colour237,bg=default
 
-set -g status-left ''
-set -g status-left-style bold,bg=colour6,fg=colour15
+set -g status-left ' '
+set -g status-left-style bold,bg=default,fg=default
 set -g status-left-length 150
 
 set -g status-right ' #S '
-set -g status-right-style bg=colour54,fg=colour15,bold
+set -g status-right-style bg=colour93,fg=colour15,bold
 set -g status-right-length 150
 
 set -g status-justify left
-setw -g window-status-separator '#[fg=colour7]/'
+setw -g window-status-separator ' '
 
 setw -g window-status-format ' #I #W '
-setw -g window-status-style fg=colour7
+setw -g window-status-style fg=colour245,bg=colour252
 
 setw -g window-status-current-format ' #I #W '
-setw -g window-status-current-style fg=colour4,bold
+setw -g window-status-current-style bg=colour15,fg=colour4,bold
