--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,29 +28,29 @@ bind-key m send-keys C-l
 
 set -g status-position top
 
-set -g status-style fg=colour15,bg=colour254,none
+set -g status-style fg=colour15,bg=colour7,none
 
 set -g mode-style reverse
 
-set -g message-style bg=colour8,fg=colour11
-set -g message-command-style none
+set -g message-style bg=colour4,fg=colour15,bold
+set -g message-command-style bg=colour4,fg=colour15,bold
 
-set -g pane-border-style fg=colour254,bg=default
-set -g pane-active-border-style fg=colour237,bg=default
+set -g pane-border-style fg=colour14,bg=colour15
+set -g pane-active-border-style fg=colour10,bg=colour7
 
 set -g status-left ' '
-set -g status-left-style bold,bg=default,fg=default
+set -g status-left-style none
 set -g status-left-length 150
 
 set -g status-right ' #S '
-set -g status-right-style bg=colour93,fg=colour15,bold
+set -g status-right-style bg=colour13,fg=colour15,bold
 set -g status-right-length 150
 
 set -g status-justify left
 setw -g window-status-separator ' '
 
 setw -g window-status-format ' #I #W '
-setw -g window-status-style fg=colour245,bg=colour252
+setw -g window-status-style fg=colour14,bg=colour7
 
 setw -g window-status-current-format ' #I #W '
-setw -g window-status-current-style bg=colour15,fg=colour4,bold
+setw -g window-status-current-style bg=colour15,fg=colour10
