--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,7 @@ set -g history-limit 100000
 
 set -g base-index 1
 set -g pane-base-index 1
+set-option -g renumber-windows on
 
 set -g mouse on
 
