--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,29 +30,29 @@ bind-key m send-keys C-l
 
 set -g status-position top
 
-set -g status-style fg=colour14,bg=colour7,none
+set -g status-style none
 
 set -g mode-style reverse
 
-set -g message-style bg=colour10,fg=colour15
-set -g message-command-style bg=colour10,fg=colour15
+set -g message-style bg=colour3,fg=colour0
+set -g message-command-style bg=colour3,fg=colour0
 
-set -g pane-border-style fg=colour7,bg=colour15
-set -g pane-active-border-style fg=colour7,bg=colour15
+set -g pane-border-style fg=colour8,bg=colour0
+set -g pane-active-border-style fg=colour15,bg=colour0
 
-set -g status-left ' '
+set -g status-left ''
 set -g status-left-style none
 set -g status-left-length 150
 
 set -g status-right ' #S '
-set -g status-right-style bg=colour6,fg=colour15
+set -g status-right-style bg=colour5,fg=colour15
 set -g status-right-length 150
 
 set -g status-justify left
 setw -g window-status-separator ' '
 
-setw -g window-status-format ' #I #W '
-setw -g window-status-style fg=colour12
+setw -g window-status-format ' #I:#W '
+setw -g window-status-style fg=colour8
 
-setw -g window-status-current-format ' #I #W '
-setw -g window-status-current-style bg=colour4,fg=colour15
+setw -g window-status-current-format ' #I:#W '
+setw -g window-status-current-style bg=colour3,fg=colour0
