--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-set -g default-terminal "screen-256color"
-set -as terminal-overrides ",gnome*:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 unbind C-b
 set -g prefix C-a
