--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 unbind C-b
@@ -28,7 +28,7 @@ set -g status-keys vi
 
 bind-key m send-keys C-l
 
-set -g status-position top
+set -g status-position bottom
 
 set -g status-style none
 
