--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,25 +34,27 @@ set -g status-style none
 
 set -g mode-style reverse
 
-set -g message-style bg=colour3,fg=colour0
-set -g message-command-style bg=colour3,fg=colour0
+set -g message-style bg="#282828",fg="#FBF1C7"
+set -g message-command-style bg="#282828",fg="#FBF1C7"
 
-set -g pane-border-style fg=colour8,bg=colour0
-set -g pane-active-border-style fg=colour15,bg=colour0
+set -g pane-active-border-style fg="#504945",bg="#282828"
+set -g pane-border-style fg="#504945",bg="#282828"
+
+set -g status-bg "#504945"
+set -g status-fg "#928374"
 
 set -g status-left ''
 set -g status-left-style none
 set -g status-left-length 150
 
 set -g status-right ' #S '
-set -g status-right-style bg=colour5,fg=colour15
+set -g status-right-style bg="#8EC07C",fg="#FBF1C7",bold
 set -g status-right-length 150
 
 set -g status-justify left
 setw -g window-status-separator ' '
 
-setw -g window-status-format ' #I:#W '
-setw -g window-status-style fg=colour8
+setw -g window-status-format ' #W '
+setw -g window-status-style fg="#928374"
 
-setw -g window-status-current-format ' #I:#W '
-setw -g window-status-current-style bg=colour3,fg=colour0
+setw -g window-status-current-format ' #W '
