Add missing current status colours

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,3 +58,4 @@ setw -g window-status-format ' #W '
 setw -g window-status-style fg="#928374"
 
 setw -g window-status-current-format ' #W '
+setw -g window-status-current-style fg="#fbf1c7",bg="#83a598",bold
