--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,6 @@ set -g history-limit 100000
 
 set -g base-index 1
 set -g pane-base-index 1
-set-option -g renumber-windows on
 
 set -g mouse on
 
@@ -34,28 +33,28 @@ set -g status-style none
 
 set -g mode-style reverse
 
-set -g message-style bg="#282828",fg="#FBF1C7"
-set -g message-command-style bg="#282828",fg="#FBF1C7"
+set -g message-style bg="#458588",fg="#FBF1C7",bold
+set -g message-command-style bg="#458588",fg="#FBF1C7",bold
 
-set -g pane-active-border-style fg="#504945",bg="#282828"
-set -g pane-border-style fg="#504945",bg="#282828"
+set -g pane-active-border-style fg="#d5c4a1",bg="#fbf1c7"
+set -g pane-border-style fg="#d5c4a1",bg="#fbf1c7"
 
-set -g status-bg "#504945"
+set -g status-bg "#ebdbb2"
 set -g status-fg "#928374"
 
-set -g status-left ''
-set -g status-left-style none
-set -g status-left-length 150
-
-set -g status-right ' #S '
-set -g status-right-style bg="#8EC07C",fg="#FBF1C7",bold
+set -g status-right ' %e %B %Y #[fg=#7c6f64,bg=#d5c4a1] %I:%M %p #[fg=#fbf1c7,bg=#726f64] #H '
+set -g status-right-style none
 set -g status-right-length 150
+
+set -g status-left ' #S #[fg=default,bg=default] '
+set -g status-left-style bg="#689d6a",fg="#FBF1C7",bold
+set -g status-left-length 150
 
 set -g status-justify left
 setw -g window-status-separator ' '
 
-setw -g window-status-format ' #W '
+setw -g window-status-format ' #I #W#F '
 setw -g window-status-style fg="#928374"
 
-setw -g window-status-current-format ' #W '
-setw -g window-status-current-style fg="#fbf1c7",bg="#83a598",bold
+setw -g window-status-current-format ' #I #W#F '
+setw -g window-status-current-style fg="#fbf1c7",bg="#458588",bold
