--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,8 +53,8 @@ set -g status-left-length 150
 set -g status-justify left
 setw -g window-status-separator ' '
 
-setw -g window-status-format ' #I #W#F '
+setw -g window-status-format ' #I #W '
 setw -g window-status-style fg="#928374"
 
-setw -g window-status-current-format ' #I #W#F '
+setw -g window-status-current-format ' #I #W '
 setw -g window-status-current-style fg="#fbf1c7",bg="#458588",bold
