vim-tmux-navigator and some cleanup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ set -g status-keys vi
 
 bind-key m send-keys C-l
 
-set -g status-position bottom
+set -g status-position top
 
 set -g status-style none
 
@@ -42,12 +42,12 @@ set -g pane-border-style fg="#d5c4a1",bg="#fbf1c7"
 set -g status-bg "#ebdbb2"
 set -g status-fg "#928374"
 
-set -g status-right ' %e %B %Y #[fg=#7c6f64,bg=#d5c4a1] %I:%M %p #[fg=#fbf1c7,bg=#726f64] #H '
+set -g status-right ' %e %B %Y #[fg=#7c6f64,bg=#d5c4a1] %I:%M %p #[fg=#fbf1c7,bg=#726f64] #H #[fg=#fbf1c7,bg=#689d6a,bold] #S '
 set -g status-right-style none
 set -g status-right-length 150
 
-set -g status-left ' #S #[fg=default,bg=default] '
-set -g status-left-style bg="#689d6a",fg="#FBF1C7",bold
+set -g status-left ''
+set -g status-left-style fg=default,bg=default,bold
 set -g status-left-length 150
 
 set -g status-justify left
@@ -58,3 +58,23 @@ setw -g window-status-style fg="#928374"
 
 setw -g window-status-current-format ' #I #W '
 setw -g window-status-current-style fg="#fbf1c7",bg="#458588",bold
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
