--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,11 +53,11 @@ set -g status-left-length 150
 set -g status-justify left
 setw -g window-status-separator ' '
 
-setw -g window-status-format ' #I #W '
+setw -g window-status-format ' #W '
 setw -g window-status-style fg="#928374"
 
-setw -g window-status-current-format ' #I #W '
-setw -g window-status-current-style fg="#fbf1c7",bg="#458588",bold
+setw -g window-status-current-format ' #W '
+setw -g window-status-current-style fg="#665c54",bg="#d5c4a1",bold
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
