--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -59,7 +59,7 @@
   unmerged = "#d65d0e bold"
   untracked = "#7c6f64"
 [core]
-  editor = vim
+  editor = nvim
   excludesfile = ~/.gitignore.global
   pager = diff-so-fancy | less --tabs=4 -RFX
 [credential]
