--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -58,7 +58,7 @@
   unmerged = "#fe8019 bold"
   untracked = "#ebdbb2 bold"
 [core]
-  editor = nvim
+  editor = vim
   excludesfile = ~/.gitignore.global
   pager = diff-so-fancy | less --tabs=4 -RFX
 [credential]
