Show Protomen/Unleash the Archers lyrics in status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,7 @@ set -g status-keys vi
 bind-key m send-keys C-l
 
 set -g status-position top
+set -g status-interval 30
 
 set -g status-style none
 
@@ -42,7 +43,7 @@ set -g pane-border-style fg="#504954",bg="#282828"
 set -g status-bg "#3c3836"
 set -g status-fg "#928374"
 
-set -g status-right ' #H #[fg=#a89984,bg=#504946] %I:%M%p #[fg=#282828,bg=#a89984,bold] #S '
+set -g status-right " #(lyrics.rb) #[fg=#a89984,bg=#504946] %I:%M%p #[fg=#282828,bg=#a89984,bold] #S "
 set -g status-right-style none
 set -g status-right-length 150
 
