--- a/ruby/.bundle/config
+++ b/ruby/.bundle/config
@@ -5,6 +5,6 @@ BUNDLE_GEM__TEST: "rspec"
 BUNDLE_GEM__MIT: "true"
 BUNDLE_GEM__COC: "true"
 BUNDLE_PATH: "vendor/bundle"
-BUNDLE_BUILD__LIBXML-RUBY: "--with-xml2-config=/usr/local/opt/libxml2/bin/xml2-config"
-BUNDLE_BUILD__LIBV8: "--with-system-v8"
-BUNDLE_BUILD__THERUBYRACER: "--with-v8-dir=/usr/local/opt/v8@3.15"
+BUNDLE_BUILD__LIBXML___RUBY: "______with___xml2___config=/usr/local/opt/libxml2/bin/xml2___config"
+BUNDLE_BUILD__LIBV8: "______with___system___v8"
+BUNDLE_BUILD__THERUBYRACER: "______with___v8___dir=/usr/local/opt/v8@3.15"
