--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,16 +34,16 @@ set -g status-style none
 
 set -g mode-style reverse
 
-set -g message-style bg="#fabd2f",fg="#282828",bold
-set -g message-command-style bg="#fabd2f",fg="#282828",bold
+set -g message-style bg="#458588",fg="#FBF1C7",bold
+set -g message-command-style bg="#458588",fg="#FBF1C7",bold
 
-set -g pane-active-border-style fg="#504954",bg="#282828"
-set -g pane-border-style fg="#504954",bg="#282828"
+set -g pane-active-border-style fg="#d5c4a1",bg="#fbf1c7"
+set -g pane-border-style fg="#d5c4a1",bg="#fbf1c7"
 
-set -g status-bg "#3c3836"
+set -g status-bg "#ebdbb2"
 set -g status-fg "#928374"
 
-set -g status-right " #(lyrics.rb) #[fg=#a89984,bg=#504946] %I:%M%p #[fg=#282828,bg=#a89984,bold] #S "
+set -g status-right " #(lyrics.rb) #[fg=#7c6f64,bg=#d5c4a1] %I:%M%p #[fg=#fbf1c7,bg=#726f64] #S "
 set -g status-right-style none
 set -g status-right-length 150
 
@@ -58,7 +58,7 @@ setw -g window-status-format ' #W '
 setw -g window-status-style fg="#928374"
 
 setw -g window-status-current-format ' #W '
-setw -g window-status-current-style fg="#282828",bg="#a89984",bold
+setw -g window-status-current-style fg="#665c54",bg="#d5c4a1",bold
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
