--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -35,7 +35,7 @@
 [commit]
   verbose = true
 [core]
-  editor = vim
+  editor = /opt/homebrew/bin/vim
   excludesfile = ~/.gitignore.global
   pager = diff-so-fancy | less --tabs=4 -RFX
 [credential]
