--- a/ruby/.bundle/config
+++ b/ruby/.bundle/config
@@ -8,3 +8,6 @@ BUNDLE_PATH: "vendor/bundle"
 BUNDLE_BUILD__LIBXML___RUBY: "______with___xml2___config=/usr/local/opt/libxml2/bin/xml2___config"
 BUNDLE_BUILD__LIBV8: "______with___system___v8"
 BUNDLE_BUILD__THERUBYRACER: "______with___v8___dir=/usr/local/opt/v8@3.15"
+BUNDLE_GEM__CI: "github"
+BUNDLE_GEM__CHANGELOG: "true"
+BUNDLE_GEM__RUBOCOP: "false"
