https://media.giphy.com/media/VXCPgZwEP7f1e/giphy-downsized-large.gif?cid=ecf05e477zk5d20vft73pxi9l21zskw2jwo9ib7td27nozyd&rid=giphy-downsized-large.gif&ct=g

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,16 +34,16 @@ set -g status-style none
 
 set -g mode-style reverse
 
-set -g message-style bg="#458588",fg="#FBF1C7",bold
-set -g message-command-style bg="#458588",fg="#FBF1C7",bold
+set -g message-style bg="#e8ea8c",fg="#020202"
+set -g message-command-style bg="#8ceae8",fg="#043020",bold
 
-set -g pane-active-border-style fg="#d5c4a1",bg="#fbf1c7"
-set -g pane-border-style fg="#d5c4a1",bg="#fbf1c7"
+set -g pane-active-border-style fg="#a6b0af",bg="#f0f0f3"
+set -g pane-border-style fg="#d0d0d3",bg="#f0f0f3"
 
-set -g status-bg "#ebdbb2"
-set -g status-fg "#928374"
+set -g status-bg "#f0f0f3"
+set -g status-fg "#424244"
 
-set -g status-right " #(lyrics.rb) #[fg=#7c6f64,bg=#d5c4a1] %I:%M%p #[fg=#fbf1c7,bg=#726f64] #S "
+set -g status-right "#[fg=#aaa3aa] #(lyrics.rb) #[fg=#9a939a,bg=#e0e0e3] %I:%M%p #[fg=#5a505a,bg=#a0a0a3] #S "
 set -g status-right-style none
 set -g status-right-length 150
 
@@ -55,10 +55,10 @@ set -g status-justify left
 setw -g window-status-separator ''
 
 setw -g window-status-format ' #W '
-setw -g window-status-style fg="#928374"
+setw -g window-status-style fg="#90939f"
 
 setw -g window-status-current-format ' #W '
-setw -g window-status-current-style fg="#665c54",bg="#d5c4a1",bold
+setw -g window-status-current-style bg="#4969f0",fg="#f5f5f3",bold
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
